--- a/rsvpyes/Views/Meetings/Details.cshtml
+++ b/rsvpyes/Views/Meetings/Details.cshtml
@@ -22,9 +22,28 @@
         <dd>
             @Html.DisplayFor(model => model.StartTime)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.PlaceName)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.PlaceName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.PlaceUri)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.PlaceUri)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Fee)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Fee)
+        </dd>
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="SendRsvp" asp-route-id="@Model.Id">SendRsvp</a> |
     <a asp-action="Index">Back to List</a>
 </div>
