--- a/rsvpyes/Views/Meetings/SendRsvp.cshtml
+++ b/rsvpyes/Views/Meetings/SendRsvp.cshtml
@@ -1,4 +1,4 @@
-﻿@model rsvpyes.Data.Meeting
+﻿@model rsvpyes.Models.Meetings.SendRsvpViewModel
 
 @{
     ViewData["Title"] = "SendRsvp";
@@ -11,70 +11,39 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Meeting.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Meeting.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.StartTime)
+            @Html.DisplayNameFor(model => model.Meeting.StartTime)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.StartTime)
+            @Html.DisplayFor(model => model.Meeting.StartTime)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.PlaceName)
+            @Html.DisplayNameFor(model => model.Meeting.PlaceName)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.PlaceName)
+            @Html.DisplayFor(model => model.Meeting.PlaceName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.PlaceUri)
+            @Html.DisplayNameFor(model => model.Meeting.PlaceUri)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.PlaceUri)
+            @Html.DisplayFor(model => model.Meeting.PlaceUri)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Fee)
+            @Html.DisplayNameFor(model => model.Meeting.Fee)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Fee)
+            @Html.DisplayFor(model => model.Meeting.Fee)
         </dd>
     </dl>
 </div>
 <div>
-    <form asp-action="Create">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Name" class="control-label"></label>
-            <input asp-for="Name" class="form-control" />
-            <span asp-validation-for="Name" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="StartTime" class="control-label"></label>
-            <input asp-for="StartTime" class="form-control" />
-            <span asp-validation-for="StartTime" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="PlaceName" class="control-label"></label>
-            <input asp-for="PlaceName" class="form-control" />
-            <span asp-validation-for="PlaceName" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="PlaceUri" class="control-label"></label>
-            <input asp-for="PlaceUri" class="form-control" />
-            <span asp-validation-for="PlaceUri" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Fee" class="control-label"></label>
-            <input asp-for="Fee" class="form-control" />
-            <span asp-validation-for="Fee" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
-    </form>
-    <div>
-        <a asp-action="Details" asp-route-id="@Model.Id">Back to Details</a>
-    </div>
+    @Html.Partial("_MailSendCommand",
+        new rsvpyes.Services.MailSendCommand() { MeetingId = Model.Meeting.Id },
+        new ViewDataDictionary(this.ViewData) { { "users", Model.Users } })
 </div>
