--- a/rsvpyes/Views/Meetings/_MailSendCommand.cshtml
+++ b/rsvpyes/Views/Meetings/_MailSendCommand.cshtml
@@ -18,17 +18,22 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SenderId" class="control-label"></label>
-                <select asp-for="SenderId" asp-items="users"></select>
+                <select asp-for="SenderId" asp-items="users" class="form-control"></select>
                 <span asp-validation-for="SenderId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RecipiantUserIds" class="control-label"></label>
-                <select asp-for="RecipiantUserIds" asp-items="users" multiple></select>
+                <select asp-for="RecipiantUserIds" asp-items="users" class="form-control" multiple></select>
                 <span asp-validation-for="RecipiantUserIds" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Title" class="control-label"></label>
+                <input asp-for="Title" class="form-control">
+                <span asp-validation-for="Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Message" class="control-label"></label>
-                <textarea asp-for="Message" class="form-control"></textarea>
+                <textarea asp-for="Message" class="form-control" rows="10"></textarea>
                 <span asp-validation-for="Message" class="text-danger"></span>
             </div>
             <div class="form-group">
