--- a/rsvpyes/Views/Response/_Layout.cshtml
+++ b/rsvpyes/Views/Response/_Layout.cshtml
@@ -26,14 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">rsvpyes</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Meetings" asp-action="Index">Meetings</a></li>
-                    <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
-                </ul>
+                <a href="#" class="navbar-brand">rsvpyes</a>
             </div>
         </div>
     </nav>
