--- a/rsvpyes/wwwroot/css/site.css
+++ b/rsvpyes/wwwroot/css/site.css
@@ -28,6 +28,9 @@
 
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
+    .form-control {
+        font-size: 16px;
+    }
     /* Hide captions */
     .carousel-caption {
         display: none;
