--- a/rsvpyes/Views/Response/Respond.cshtml
+++ b/rsvpyes/Views/Response/Respond.cshtml
@@ -19,7 +19,7 @@
     <form action="RespondNo?id=@Model.Id" method="post">
         <div class="form-group">
             <label for="reason">参加しない理由</label>
-            <textarea class="form-control" id="reason" rows="3"></textarea>
+            <textarea class="form-control" id="reason" name="reason" rows="3"></textarea>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-danger btn<d-lg btn-block">参加しない</button>
