--- a/rsvpyes/Views/Response/Respond.cshtml
+++ b/rsvpyes/Views/Response/Respond.cshtml
@@ -7,7 +7,7 @@
 <h2>@Model.UserName さん、飲み会に参加しますか？</h2>
 
 <div id="yes">
-    <form action="RespondYes?id=@Model.Id" method="post">
+    <form asp-action="RespondYes" asp-route-id="@Model.Id">
         <div class="form-group">
             <button type="submit" class="btn btn-primary btn-lg btn-block">参加する</button>
         </div>
@@ -16,13 +16,13 @@
     </form>
 </div>
 <div id="no" class="hidden">
-    <form action="RespondNo?id=@Model.Id" method="post">
+    <form asp-action="RespondNo" asp-route-id="@Model.Id">
         <div class="form-group">
             <label for="reason">参加しない理由</label>
             <textarea class="form-control" id="reason" name="reason" rows="3"></textarea>
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-danger btn<d-lg btn-block">参加しない</button>
+            <button type="submit" class="btn btn-danger btn-lg btn-block">参加しない</button>
         </div>
         <p></p>
         <div><a href="#" id="respond-to-yes-link">参加する場合はこちら</a></div>
