会を開く手順について記載

--- a/rsvpyes/Views/Home/Index.cshtml
+++ b/rsvpyes/Views/Home/Index.cshtml
@@ -2,4 +2,31 @@
     ViewData["Title"] = "Home";
 }
 <h2>@ViewData["Title"]</h2>
-<p>@ViewData["Message"]</p>
+<p>飲み会の出欠席確認システムです。</p>
+
+<hr />
+<h3>会を開く手順</h3>
+<ol>
+    <li>会の目的を決める</li>
+    <li>会を進める上で必ず出席が必要な人に連絡を取り日程を調整する</li>
+    <li>お店を決める (先に決めておいた方が、何かと便利)</li>
+    <li>招待者のリストを確認する・してもらう</li>
+    <li>招待のメールを送信する (日時・場所が決まってから送るのがよい)</li>
+    <li>返信を待つ</li>
+    <li>会の段取りを決める</li>
+</ol>
+
+<hr />
+<h3>会の段取り</h3>
+<p>
+    一般的な飲み会はあいさつ・乾杯 → なにか催し(オプション) → 締めのあいさつ・一本締めで進行する。
+    お金の徴収は事前だと素晴らしいけど、その場でも可。会社にお金を出してもらう場合などは、
+    領収書を提出する。また、会社名義で会を行う場合は事前・事後に報告を入れる。
+</p>
+<ol>
+    <li>始まりのあいさつ・乾杯をお願いする</li>
+    <li>締めのあいさつ・一本締めをお願いする</li>
+    <li>出席確認をする</li>
+    <li>会費を徴収する</li>
+    <li>収支報告・参加者一覧を作成する</li>
+</ol>
