--- a/rsvpyes/Views/Meetings/Details.cshtml
+++ b/rsvpyes/Views/Meetings/Details.cshtml
@@ -45,6 +45,7 @@
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Meeting.Id">Edit</a> |
     <a asp-action="SendRsvp" asp-route-id="@Model.Meeting.Id">SendRsvp</a> |
+    <a asp-action="AddRsvp" asp-route-id="@Model.Meeting.Id">AddRsvp</a> |
     <a asp-action="Index">Back to List</a>
 </div>
 <div>
