--- a/rsvpyes/Views/Meetings/AddRsvp.cshtml
+++ b/rsvpyes/Views/Meetings/AddRsvp.cshtml
@@ -2,6 +2,14 @@
 
 @{
     ViewData["Title"] = "AddRsvp";
+    var users = Model.Users
+        .OrderBy(u => u.Organization)
+        .ThenBy(u => u.Name)
+        .Select(e => new SelectListItem()
+        {
+            Value = e.Id.ToString(),
+            Text = e.Name + (string.IsNullOrEmpty(e.Organization) ? "" : $" ({e.Organization})"),
+        });
 }
 
 <h2>Details</h2>
@@ -50,7 +58,7 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Users" class="control-label"></label>
-                    <select name="RecipiantUserIds" asp-items="Model.Users.Select(e=>new SelectListItem() { Text = e.Name, Value = e.Id.ToString() })" class="form-control" multiple></select>
+                    <select name="RecipiantUserIds" asp-items="users" class="form-control" multiple></select>
                     <span asp-validation-for="Users" class="text-danger"></span>
                 </div>
                 <div class="form-group">
