--- a/rsvpyes/Views/Users/Create.cshtml
+++ b/rsvpyes/Views/Users/Create.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Create";
+    var organization = ViewData["Organization"] as string;
 }
 
 <h2>Create</h2>
@@ -10,13 +11,20 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" asp-route-organization="@organization">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Organization" class="control-label"></label>
-                <input asp-for="Organization" class="form-control" />
-                <span asp-validation-for="Organization" class="text-danger"></span>
-            </div>
+            @if (string.IsNullOrEmpty(organization))
+            {
+                <div class="form-group">
+                    <label asp-for="Organization" class="control-label"></label>
+                    <input asp-for="Organization" class="form-control" />
+                    <span asp-validation-for="Organization" class="text-danger"></span>
+                </div>
+            }
+            else
+            {
+                <input asp-for="Organization" type="hidden" />
+            }
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -35,6 +43,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-organization="@ViewData["Organization"]">Back to List</a>
 </div>
 
