--- a/rsvpyes/Views/Users/Delete.cshtml
+++ b/rsvpyes/Views/Users/Delete.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete";
+    var organization = ViewData["Organization"] as string;
 }
 
 <h2>Delete</h2>
@@ -19,9 +20,9 @@
         </dd>
     </dl>
 
-    <form asp-action="Delete">
+    <form asp-action="Delete" asp-route-organization="@organization">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" asp-route-organization="@ViewData["Organization"]">Back to List</a>
     </form>
 </div>
