--- a/rsvpyes/Views/Users/Details.cshtml
+++ b/rsvpyes/Views/Users/Details.cshtml
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id" asp-route-organization="@ViewData["Organization"]">Edit</a> |
+    <a asp-action="Index" asp-route-organization="@ViewData["Organization"]">Back to List</a>
 </div>
