--- a/rsvpyes/Views/Users/Edit.cshtml
+++ b/rsvpyes/Views/Users/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
+    var organization = ViewData["Organization"] as string;
 }
 
 <h2>Edit</h2>
@@ -10,14 +11,21 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" asp-route-organization="@organization">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Organization" class="control-label"></label>
-                <input asp-for="Organization" class="form-control" />
-                <span asp-validation-for="Organization" class="text-danger"></span>
-            </div>
+            @if (string.IsNullOrEmpty(organization))
+            {
+                <div class="form-group">
+                    <label asp-for="Organization" class="control-label"></label>
+                    <input asp-for="Organization" class="form-control" />
+                    <span asp-validation-for="Organization" class="text-danger"></span>
+                </div>
+            }
+            else
+            {
+                <input asp-for="Organization" type="hidden" />
+            }
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -36,6 +44,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-organization="@ViewData["Organization"]">Back to List</a>
 </div>
 
