--- a/rsvpyes/Views/Users/Index.cshtml
+++ b/rsvpyes/Views/Users/Index.cshtml
@@ -2,12 +2,21 @@
 
 @{
     ViewData["Title"] = "Index";
+    var organizations = ViewData["Organizations"] as List<string>;
+    var organization = ViewData["Organization"] as string;
 }
 
 <h2>Index</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" asp-route-organization="@organization">Create New</a>
+</p>
+<p>
+    <a asp-action="Index" class="btn btn-xs  @(string.IsNullOrEmpty(organization) ? "btn-primary" : "btn-default")">ALL</a>
+    @foreach (var o in organizations)
+    {
+        <a asp-action="Index" asp-route-organization="@o" class="btn btn-xs  @(o == organization ? "btn-primary" : "btn-default")">@o</a>
+    }
 </p>
 <table class="table">
     <thead>
@@ -38,9 +47,9 @@
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" asp-route-organization="@organization">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id" asp-route-organization="@organization">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" asp-route-organization="@organization">Delete</a>
                 </td>
             </tr>
         }
