--- a/rsvpyes/Views/Users/Edit.cshtml
+++ b/rsvpyes/Views/Users/Edit.cshtml
@@ -14,18 +14,11 @@
         <form asp-action="Edit" asp-route-organization="@organization">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            @if (string.IsNullOrEmpty(organization))
-            {
-                <div class="form-group">
-                    <label asp-for="Organization" class="control-label"></label>
-                    <input asp-for="Organization" class="form-control" />
-                    <span asp-validation-for="Organization" class="text-danger"></span>
-                </div>
-            }
-            else
-            {
-                <input asp-for="Organization" type="hidden" />
-            }
+            <div class="form-group">
+                <label asp-for="Organization" class="control-label"></label>
+                <input asp-for="Organization" class="form-control" />
+                <span asp-validation-for="Organization" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -44,6 +37,6 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-organization="@ViewData["Organization"]">Back to List</a>
+    <a asp-action="Index" asp-route-organization="@organization">Back to List</a>
 </div>
 
